--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="span6 video">
           Video
         </div>
-        <div class="spam6">
+        <div class="span6">
           <div class="thermometer">
             Thermometer
           </div>
@@ -93,8 +93,8 @@
         </div>
       </div>
       <div class="row footer">
-        <div calss="span12">
-          FOOTER
+        <div class="span12">
+          Footer
         </div>
       </div>
     </div>
