--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://imgur.com/LbSB7ym.jpg">
+          <img class="img-polaroid" alt="photo" src="http://imgur.com/LbSB7ym.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -206,7 +206,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/BnDObjW.jpg">
+          <img class="img-polaroid" alt="photo" src="http://i.imgur.com/BnDObjW.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -242,7 +242,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/Qn4PNTV.jpg">
+          <img class="img-polaroid" alt="photo" src="http://i.imgur.com/Qn4PNTV.jpg">
         </div>
       </div>
 
